--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.security:spring-security-crypto'
-	runtime('com.oracle:ojdbc7:12.1.0.2.0')
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -34,6 +33,7 @@ dependencies {
 	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 	compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.4.1.jre15'
 
 
 }
